# library

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/common/: common.cmake  log.c  log.h  version.h
core/mail/: mail-error.c  mail-message-manager.c  mail-message-manager.h  mail-message-parser-manager.c  mail-message-parser-manager.h  mail-session-private.h  mail-session.c  mail-session.h  mail.cmake
core/mail/imap/: README.md  imap-message.c  imap-message.h  imap.cmake
core/mail/interface/: interface.cmake  mail-error.c  mail-error.h  mail-message-type.h  mail-message.c  mail-message.h  mail-session-private.h  mail-session.c  mail-session.h
example/: CMakeLists.txt  imap-example.c
